Fix bug buttons overlapping header

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,7 +9,7 @@ header {
   width: 100%;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 #header-inner {
